--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -11,7 +11,7 @@
         android:id="@+id/about_img"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/img_profil"
+        android:src="@drawable/about"
         app:layout_constraintBottom_toBottomOf="@id/txt_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
